# IBD

./: Makefile  pyproject.toml  settings.py  test.py
components/sample_images/: sample.txt
loader/: data_loader.py  feature_loader.py  model_loader.py
notebooks/: zennit-pinv.ipynb  zennit.ipynb
result/pytorch_resnet18_places365/: valid_concept.npy.npz
tests/: verify-artifacts.py
util/: feature_decoder.py  feature_operation.py  image_operation.py
